Change logo header and footer studio. Fix home banner on mobile.

--- a/edx-platform/usm/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/edx-platform/usm/lms/static/sass/partials/lms/theme/_extras.scss
@@ -265,4 +265,10 @@
       display: block;
     }
   }
+
+  .home>header .outer-wrapper {
+    float: none;
+    width: auto;
+    padding: 30px 10px;
+  }
 }
